Make sure to fill canvas opaquely when painting bookmark bar background.

BUG=596370

Review URL: https://codereview.chromium.org/1861783002

Cr-Commit-Position: refs/heads/master@{#385892}

Former-commit-id: 046ca0c1fd8e435ee0b15a5a84f517f0a3ca2da8